Adding a basic outline.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -12,8 +12,8 @@
 \IEEEoverridecommandlockouts
 
 \begin{document}
-\title{Title}
-\author{}
+\title{SoK: Blockchain Technology and Its Applications}
+\author{Anonymous}
 \maketitle
 
 %====================================================================
@@ -25,9 +25,31 @@
 
 %====================================================================
 
-\input{sections/body}
+Possible reader goals. Jeremy's suggestions:
+\begin{enumerate}
+	\item ???
+	\item ???
+	\item I no longer have to read the 100+ industry whitepapers, as they are summarized here.
+\end{enumerate}
+
+Scott's suggestions:
+\begin{enumerate}
+	\item What is Blockchain and what is it not? What are its key properties? What are not properties of Blockchain?
+	
+	\item What are possible use case areas for Blockchain research. How do I know if my research area might benefit from Blockchain?
+\end{enumerate}
+
+\input{sections/introduction}
+\input{sections/methodology}
+\input{sections/results}
+\input{sections/criteria}
+\input{sections/use-cases}
+\input{sections/discussion}
+\input{sections/conclusion}
 
 %====================================================================
+
+\cite{small}
 
 \bibliographystyle{abbrv}
 \footnotesize
