--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../main.tex
 
 % = = = Compact Bibliography
-\usepackage{bibspacing}
-\setlength{\bibspacing}{\baselineskip}
+%\usepackage{bibspacing}
+%\setlength{\bibspacing}{\baselineskip}
 
 %------------------------IEEE----------------------%
 
@@ -12,7 +12,7 @@
 \usepackage{eqparbox}
 
 % = = = IEEE Recommended (Double-column)
-\usepackage{fixltx2e}
+%\usepackage{fixltx2e}
 \usepackage{stfloats}
 
 % NOTE: IEEE does not allow algorithm2e
