First half of the methodology section is written.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -53,7 +53,7 @@ Scott's suggestions:
 
 \bibliographystyle{abbrv}
 \footnotesize
-\bibliography{bib/ref.bib}
+\bibliography{bib/ref}
 \normalsize
 
 
