--- a/paper/sections/criteria.tex
+++ b/paper/sections/criteria.tex
@@ -1,10 +1,30 @@
-\section{Blockchain Criteria (Ben/Scott)}
+\section{Lessons Learned (Scott)}
 
-How do we know which use cases are good fits for blockchain?
+What was missing in the graph?
+	Off-chain stapling
+	Anonymity
+		MPC
+		Functional encryption
+	Authenticated data structure
 
-1) Decentralized governance
-2) Auditability
-3) Resiliency
+Terminology
 
-How do these relate?
-Is there a question train we can create?
+Normative vs. technical properties
+	public participation is a huge normative property. Not gauntleted to be in a Blockchain.
+	There are risks of thinking they are the same
+		Using blockchain assuming you get normative properties, not just technical properties
+		Get saturated on normative properties, ignore the technical properties
+	Diffused trust vs. trustfulness
+	Decentralization
+		Governance and communication are required to be decentralized
+		Disintermediation is normative, and may or may not be part of a Blockchain
+			There are always intermediaries. Decentralization limits their power.
+
+
+
+How do we know which use cases are good fits for Blockchain?
+Criteria
+	1) Decentralized governance (*)
+	2) Auditability
+	3) Resiliency	
+Is there a question tree we can create?
