--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,3 +1,19 @@
 \section{Discussion (All)}
 
-What are the implications of our results? How should people use / think about our work?
+Fast/cheap is because of deregulation
+	Do things that are legally questionable
+
+Degrees of decentralization
+	Single - not really a blockchain, or is it?
+	Oligarchy
+	Embarrassingly decentralized
+	
+There are risks of thinking they are the same
+	Using blockchain assuming you get normative properties, not just technical properties
+	Get saturated on normative properties, ignore the technical properties
+	
+Blockchain is not only for global system
+
+Lighter options when all of blockchain not needed
+	Distributed data sources with auditability/replication
+	
