--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -5,27 +5,33 @@ Types of items
 	Properties
 		Technological
 		Normative
-		Discuss why it was meaningful to separate these two
-	Capability
+	Capabilities
+		Provenance
+			Off-chain physical asset provenance
+			Off-chain digital asset provenance
+			On-chain asset provenance
+		Access control for tokens
+		Data discoverability
+		Transaction rules/smart contracts
+			(Most applications rely on this)
+		Auditability
+			Internal auditability
+			Global auditability
+		
+		
+Governance is central
+Anonymity is orthogonal
+Game theory is core to decentralized governance
 
-Key properties of Blockchain
-	Governance
-		Game theory
-	Consensus
-	Rules
-		Smart contracts
-		Oracles
-	Data structures
-		Distributed data store
-		Distributed ledger
-	Resillience
+Resilience
+	Broadly supported
+	Easy to overlook parts of this property when not taken as a whole
 
-Capabilities
-	Provenance
-	Data discoverability
-	Access control for tokens
-	Resilience
-	etc...
-	
-What we added that wasn't in the original graph
-	Also why
+Normative and technical properties are cleanly separable
+Ledger=/data store
+
+Blockchain is not a global platform by definition
+
+
+Challenges
+Limitations
