--- a/paper/setup/macros.tex
+++ b/paper/setup/macros.tex
@@ -60,7 +60,9 @@
 % = = = Name
 \newcommand{\Name}{\textsf{System Name}\xspace}
 
-
-
-
-
+% = = = Concept Categories
+\newcommand{\usecase}[1]{\textcolor{LightBlue}{\textbf{#1}}}
+\newcommand{\capability}[1]{\textcolor{Dandelion}{\textbf{#1}}}
+\newcommand{\normproperty}[1]{\textcolor{Orange}{\textbf{#1}}}
+\newcommand{\techproperty}[1]{\textcolor{NavyBlue}{\textbf{#1}}}
+\newcommand{\primitive}[1]{\textcolor{Green}{\textbf{#1}}}
