--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -35,7 +35,7 @@
 
 % = = = Other
 \usepackage{array}
-\usepackage{color}
+\usepackage[usenames, dvipsnames]{color}
 \usepackage[hyphens]{url}
 \usepackage[pdftitle=Title,pdfauthor=Anonymous]{hyperref}
 
