Additional content for results section (nearly finished first draft)

--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,4 +1,4 @@
-\section{Results (Ben)}
+I\section{Results (Ben)}
 In our concept dependency graph, use cases depend on capabilities, which are specific high-level functions that blockchain can provide to solve real-world problems. In turn, capabilities are enabled by technological properties, which are provided by specific primitives. See Fig. XX for an example.  The primitive \primitive{hash chain} provides the property \techproperty{append-only transaction ledger}, which in conjunction with other properties enables the capability for \capability{internal auditability}. Use cases in the provenance family require internal auditability to ensure valid provenance trails.
 \textbf{TODO: figure showing graph and style legend}
 
@@ -9,9 +9,9 @@ We will begin with an overview of the capabilities we generated during selective
 
 Provenance capabilities all rely on an \techproperty{append-only transaction ledger}, because provenance must be immutable to be useful. The ledger consists of a series of \primitive{transactions}, which are ordered through \primitive{timestamping} and stored in an \primitive{authenticated data structure} (a \primitive{hashchain}, \primitive{hash DAG}, or \primitive{Merkle tree}). 
 
-\paragraph{Smart contracts / automatic code execution} A program stored on a blockchain can be executed automatically in response to function calls added in later transactions. These programs, sometimes called \capability{smart contracts}, can modify the global state of the blockchain (i.e., by moving Ether from one address to another). Miners enforce \techproperty{rules on transactions} to determine what types of programs the blockchain supports. This property depends on the \capability{governance} capability, its primitive dependencies \primitive{Sybil resistance} and \primitive{game theory}, and the following additional primitives: \primitive{transactions}, \primitive{authentication}, and \primitive{off-chain oracles}.
+\paragraph{Smart contracts / automatic code execution} A program stored on a blockchain can be executed automatically in response to function calls added in later transactions. These programs, sometimes called \capability{smart contracts}, can modify the global state of the blockchain (i.e., by moving Ether from one address to another). Miners enforce \techproperty{replication rules} on transactions to determine what types of programs the blockchain supports. This property depends on the \capability{governance} capability, its primitive dependencies \primitive{Sybil resistance} and \primitive{game theory}, and the following additional primitives: \primitive{transactions}, \primitive{authentication}, and \primitive{off-chain oracles}.
 
-\paragraph{Auditability} Blockchain-based systems operate by enforcing \techproperty{rules on transactions}, which define what state changes are valid. Because the \techproperty{append-only transaction ledger} stores the full history of state changes, it is possible to audit the system to determine what operations occurred and that they were validated. Any blockchain permits \capability{internal auditability}, meaning that participants can perform audits. Blockchains that allow \normproperty{public participation} can further support \capability{public auditability}, meaning that anyone can perform an audit.
+\paragraph{Auditability} Blockchain-based systems operate by enforcing \techproperty{replication rules}, which define what state changes are valid. Because the \techproperty{append-only transaction ledger} stores the full history of state changes, it is possible to audit the system to determine what operations occurred and that they were validated. Any blockchain permits \capability{internal auditability}, meaning that validators can perform audits. Blockchains that allow \normproperty{public participation} can further support \capability{public auditability}, meaning that anyone can perform an audit.
 
 \paragraph{Resilience} Broadly speaking, resilience describes the ability of a system to recover from compromises and maintain operation even when in a compromised state. There are three key blockchain capabilities in the resilience family. First, \capability{data replication} mitigates attacks that target data at rest. Second, the properties of Blockchain as a \techproperty{distributed ledger} and an \techproperty{append-only ledger} allow for \capability{verifiable data store rebuilding}. Finally, \techproperty{decentralization} (and particularly {\capability{decentralized governance} and \primitive{peer-to-peer communication}) results in \capability{no single points of failure}, removing obvious targets for attack such as transaction processors or centralized communication servers.
 
@@ -24,12 +24,25 @@ Provenance capabilities all rely on an \techproperty{append-only transaction led
 \paragraph{Decentralized governance is the central capability of Blockchain}
 \techproperty{Decentralization} is enabled by \capability{consensus}-based governance, of which Blockchain permits two types: \techproperty{public governance} and \techproperty{permissioned governance}. Either can rely on \primitive{on-chain incentives} (such as Bitcoin block rewards) or \primitive{off-chain incentives} (e.g., contractually obligated payment) to encourage honest behavior from governors. Full decentralization -- i.e., public governance -- further relies on \primitive{Sybil resistance} to prevent individuals from presenting multiple identities to increase their governance share.
 
+This subgraph is central in our dependency graph; it makes use of a large proportion of primitives, is strongly interconnected to other capabilities, and supports many use cases. As such, we interpret the ability to operate a shared system and transact between parties without reliance on any centralized parties as a core feature of Blockchain technology. Many of the use cases in our graph, such as \usecase{payments}, \usecase{identity management}, and \usecase{gambling}, are well-studied problems with obvious or widely known centralized solutions; the primary benefit of developing blockchain-based solutions to these problems is to eliminate centralized processing. Thus, we pose the following question as an initial litmus test for evaluating whether a problem well-suited for applying blockchain: \textit{does it require decentralized governance or operation?} While an answer of "no" does not necessarily mean that Blockchain is not necessary, a "yes" is a very strong indicator that a blockchain may be the right solution.
+
 \paragraph{Anonymity and privacy are orthogonal to the core functions of a blockchain}
+Several authors in our corpus cite \capability{anonymity} or privacy as features of Blockchain, although these terms are rarely defined precisely. The main belief seems to be that Blockchain has the property of \techproperty{anonymous transactions} -- i.e., it hides the sender and receiver of asset transfers and disassociates on-chain identities from real-world identities. These notions are connected to Blockchain's reputation for enabling illicit activity (see section~\ref{subsec:challenges} for a discussion of this challenge). The thinking goes that because Bitcoin is the currency of choice for illicit online purchases, it must be "untraceable", and as the most prominent blockchain-based system, distinctions are not drawn between properties of Bitcoin and properties of Blockchain.
+
+Copious literature demonstrating the lack of privacy and anonymity in Bitcoin aside (\textbf{TODO: add citations}), our graph reveals that anonymity is a weakly-connected capability, leveraging few of Blockchain's core primitives and and supporting \textbf{no} use cases. While advanced cryptography like \primitive{multi-party computation}, \primitive{functional encryption}, and \primitive{zero-knowledge proofs} could be layered on top of a blockchain to provide some form of anonymity, only the last primitive appeared in our corpus. \techproperty{Key-based ownership of tokens} is the only property that supports anonymity and also derives from at least one core blockchain primitive (specifically, \primitive{authentication}).
 
 \paragraph{Resilience is a broadly supported capability that is easy to overlook}
+As described above, there are three capabilities that provide resilience: \capability{data replication}, \capability{verifiable data store rebuilding}, and \capability{no single points of failure}. These capabilities are supported by key technical properties (\techproperty{distributed data store}, \techproperty{distributed ledger}, and \techproperty{decentralization}), but resilience as a whole is only directly required by a few use cases. This makes the significance of the capability easy to overlook. However, there are a few pieces of important auxiliary information that underscore its importance:
+
+\begin{enumerate}
+	\item In general, distributed systems aim to be resilient to disruption. This is one of the reasons to distribute a system rather than run it centrally. Because most blockchain applications are distributed systems, we judge that this capability is of high value even though it does not directly enable many use cases. In other words: although there are few Blockchain applications that cannot exist without resilience, there are many that benefit from it.
+	\item Resilience is more of a principle than a specific technical capability, and it can only be defined or measured with respect to a specific threat model. The three capabilities that we identify as providing resilience each do it along a different technical vector, protecting against different threats and thus providing a very broad definition of resilience. This too contributes to the high value we ascribe to the capability.
+\end{enumerate}
 
 \paragraph{Normative and technical properties are cleanly separable}
+When reading papers or participating in discussions about Blockchain, it can be difficult to separate normative statements from technical ones (see section~\ref{subsec:challenges} for a discussion of this challenge). In our concept graph, however, technical properties and normative properties cleanly separate. No capabilities have dependencies on normative properties, and removing them from graph does not lessen the value of the graph as an exploration of technical concepts. The injection of ideology into a technical field causes confusion and suboptimal design choices -- not to mention muddying discussion and prevent clarity -- so we believe this surprising result is of value to the field in so far as it may help to resolve these issues.
 
 \paragraph{Blockchain can serve as both a ledger and a data store, but it's better as a ledger}
 
 \subsection{Key challenges and limitations}
+\label{subsec:challenges}
