--- a/paper/setup/macros.tex
+++ b/paper/setup/macros.tex
@@ -61,7 +61,7 @@
 \newcommand{\Name}{\textsf{System Name}\xspace}
 
 % = = = Concept Categories
-\newcommand{\usecase}[1]{\textcolor{LightBlue}{\textbf{#1}}}
+\newcommand{\usecase}[1]{\textcolor{CornflowerBlue}{\textbf{#1}}} %try ProcessBlue, Cerulean, Cyan, or OliveGreen
 \newcommand{\capability}[1]{\textcolor{Dandelion}{\textbf{#1}}}
 \newcommand{\normproperty}[1]{\textcolor{Orange}{\textbf{#1}}}
 \newcommand{\techproperty}[1]{\textcolor{NavyBlue}{\textbf{#1}}}
